bindings/dart/lib/src/revault_native.dart

          >('vault_directory_list_form_aliases'),
      _vault_directory_private_key_exists = library
          .lookupFunction<
            _VaultDirectoryPrivateKeyExistsNative,
            _VaultDirectoryPrivateKeyExistsDart
          >('vault_directory_private_key_exists'),
      _vault_directory_delete_private_key = library
          .lookupFunction<
            _VaultDirectoryDeletePrivateKeyNative,
            _VaultDirectoryDeletePrivateKeyDart
          >('vault_directory_delete_private_key'),
      _vault_directory_store_private_key = library
          .lookupFunction<
            _VaultDirectoryStorePrivateKeyNative,
            _VaultDirectoryStorePrivateKeyDart
          >('vault_directory_store_private_key'),
      _vault_directory_load_private_key = library
          .lookupFunction<
            _VaultDirectoryLoadPrivateKeyNative,
            _VaultDirectoryLoadPrivateKeyDart
          >('vault_directory_load_private_key'),
      _vault_directory_load_private_key_generation = library
          .lookupFunction<
            _VaultDirectoryLoadPrivateKeyGenerationNative,
            _VaultDirectoryLoadPrivateKeyGenerationDart
          >('vault_directory_load_private_key_generation'),
      _vault_directory_store_contact = library
          .lookupFunction<
            _VaultDirectoryStoreContactNative,
            _VaultDirectoryStoreContactDart
          >('vault_directory_store_contact'),
      _vault_directory_load_contact = library
          .lookupFunction<
            _VaultDirectoryLoadContactNative,
            _VaultDirectoryLoadContactDart
          >('vault_directory_load_contact'),
      _vault_directory_contact_exists = library
          .lookupFunction<
            _VaultDirectoryContactExistsNative,
            _VaultDirectoryContactExistsDart
          >('vault_directory_contact_exists'),
      _vault_directory_delete_contact = library
          .lookupFunction<
            _VaultDirectoryDeleteContactNative,
            _VaultDirectoryDeleteContactDart
          >('vault_directory_delete_contact'),
      _vault_directory_list_contacts = library
          .lookupFunction<
            _VaultDirectoryListContactsNative,
            _VaultDirectoryListContactsDart
          >('vault_directory_list_contacts'),
      _vault_directory_store_profile_email = library
          .lookupFunction<
            _VaultDirectoryStoreProfileEmailNative,
            _VaultDirectoryStoreProfileEmailDart
          >('vault_directory_store_profile_email'),
      _vault_directory_profile_email = library
          .lookupFunction<
            _VaultDirectoryProfileEmailNative,
            _VaultDirectoryProfileEmailDart
          >('vault_directory_profile_email'),
      _vault_directory_store_backup = library
          .lookupFunction<
            _VaultDirectoryStoreBackupNative,
            _VaultDirectoryStoreBackupDart
          >('vault_directory_store_backup'),
      _vault_directory_load_backup = library
          .lookupFunction<
            _VaultDirectoryLoadBackupNative,
            _VaultDirectoryLoadBackupDart
          >('vault_directory_load_backup'),
      _vault_directory_backup_count = library
          .lookupFunction<
            _VaultDirectoryBackupCountNative,
            _VaultDirectoryBackupCountDart
          >('vault_directory_backup_count'),
      _vault_directory_restore_private_key = library
          .lookupFunction<
            _VaultDirectoryRestorePrivateKeyNative,
            _VaultDirectoryRestorePrivateKeyDart
          >('vault_directory_restore_private_key'),
      _vault_directory_load_owner_signing_key = library
          .lookupFunction<
            _VaultDirectoryLoadOwnerSigningKeyNative,
            _VaultDirectoryLoadOwnerSigningKeyDart
          >('vault_directory_load_owner_signing_key'),
      _vault_directory_load_owner_signing_key_generation = library
          .lookupFunction<
            _VaultDirectoryLoadOwnerSigningKeyGenerationNative,
            _VaultDirectoryLoadOwnerSigningKeyGenerationDart
          >('vault_directory_load_owner_signing_key_generation'),
      _vault_directory_store_contact_signing_key = library
          .lookupFunction<
            _VaultDirectoryStoreContactSigningKeyNative,
            _VaultDirectoryStoreContactSigningKeyDart
          >('vault_directory_store_contact_signing_key'),
      _vault_directory_load_contact_signing_key = library
          .lookupFunction<
            _VaultDirectoryLoadContactSigningKeyNative,
            _VaultDirectoryLoadContactSigningKeyDart
          >('vault_directory_load_contact_signing_key'),
      _vault_directory_list_profile_generations = library
          .lookupFunction<
            _VaultDirectoryListProfileGenerationsNative,
            _VaultDirectoryListProfileGenerationsDart
          >('vault_directory_list_profile_generations'),
      _vault_directory_rotate_private_key = library
          .lookupFunction<
            _VaultDirectoryRotatePrivateKeyNative,
            _VaultDirectoryRotatePrivateKeyDart
          >('vault_directory_rotate_private_key'),
      _vault_directory_remember_lockbox = library
          .lookupFunction<
            _VaultDirectoryRememberLockboxNative,
            _VaultDirectoryRememberLockboxDart
          >('vault_directory_remember_lockbox'),
      _vault_directory_list_known_lockboxes = library
          .lookupFunction<
            _VaultDirectoryListKnownLockboxesNative,
            _VaultDirectoryListKnownLockboxesDart
          >('vault_directory_list_known_lockboxes'),
      _vault_directory_forget_lockbox = library
          .lookupFunction<
            _VaultDirectoryForgetLockboxNative,
            _VaultDirectoryForgetLockboxDart
          >('vault_directory_forget_lockbox'),
      _vault_directory_remember_access_slot_label = library
          .lookupFunction<
            _VaultDirectoryRememberAccessSlotLabelNative,
            _VaultDirectoryRememberAccessSlotLabelDart
          >('vault_directory_remember_access_slot_label'),
      _vault_directory_list_access_slot_labels = library
          .lookupFunction<
            _VaultDirectoryListAccessSlotLabelsNative,
            _VaultDirectoryListAccessSlotLabelsDart
          >('vault_directory_list_access_slot_labels'),
      _vault_directory_find_access_slot_labels = library
          .lookupFunction<
            _VaultDirectoryFindAccessSlotLabelsNative,
            _VaultDirectoryFindAccessSlotLabelsDart
          >('vault_directory_find_access_slot_labels'),
      _vault_directory_forget_access_slot_label = library
          .lookupFunction<
            _VaultDirectoryForgetAccessSlotLabelNative,
            _VaultDirectoryForgetAccessSlotLabelDart
          >('vault_directory_forget_access_slot_label'),
      _vault_directory_define_form = library
          .lookupFunction<
            _VaultDirectoryDefineFormNative,
            _VaultDirectoryDefineFormDart
          >('vault_directory_define_form'),
      _vault_directory_resolve_form = library
          .lookupFunction<
            _VaultDirectoryResolveFormNative,
            _VaultDirectoryResolveFormDart
          >('vault_directory_resolve_form'),
      _vault_directory_list_forms = library
          .lookupFunction<
            _VaultDirectoryListFormsNative,
            _VaultDirectoryListFormsDart
          >('vault_directory_list_forms'),
      _vault_directory_list_form_revisions = library
          .lookupFunction<
            _VaultDirectoryListFormRevisionsNative,
            _VaultDirectoryListFormRevisionsDart
          >('vault_directory_list_form_revisions'),
      _vault_directory_seed_forms = library
          .lookupFunction<
            _VaultDirectorySeedFormsNative,
            _VaultDirectorySeedFormsDart
          >('vault_directory_seed_forms'),
      _vault_directory_remember_password = library
          .lookupFunction<
            _VaultDirectoryRememberPasswordNative,
            _VaultDirectoryRememberPasswordDart
          >('vault_directory_remember_password'),
      _vault_directory_remembered_password = library
          .lookupFunction<
            _VaultDirectoryRememberedPasswordNative,
            _VaultDirectoryRememberedPasswordDart
          >('vault_directory_remembered_password'),
      _vault_backup_default = library
          .lookupFunction<_VaultBackupDefaultNative, _VaultBackupDefaultDart>(
            'vault_backup_default',
          ),
      _vault_restore_default = library
          .lookupFunction<_VaultRestoreDefaultNative, _VaultRestoreDefaultDart>(
            'vault_restore_default',
          ),
      _vault_directory_free = library
          .lookupFunction<_VaultDirectoryFreeNative, _VaultDirectoryFreeDart>(
            'vault_directory_free',
          ),
      _vault_read_only_open = library
          .lookupFunction<_VaultReadOnlyOpenNative, _VaultReadOnlyOpenDart>(
            'vault_read_only_open',
          ),
      _vault_read_only_open_default = library
          .lookupFunction<
            _VaultReadOnlyOpenDefaultNative,
            _VaultReadOnlyOpenDefaultDart
          >('vault_read_only_open_default'),
      _vault_read_only_list_profile_names = library
          .lookupFunction<
            _VaultReadOnlyListProfileNamesNative,
            _VaultReadOnlyListProfileNamesDart
          >('vault_read_only_list_profile_names'),
      _vault_read_only_list_contact_names = library
          .lookupFunction<
            _VaultReadOnlyListContactNamesNative,
            _VaultReadOnlyListContactNamesDart
          >('vault_read_only_list_contact_names'),
      _vault_read_only_list_form_aliases = library
          .lookupFunction<
            _VaultReadOnlyListFormAliasesNative,
            _VaultReadOnlyListFormAliasesDart
          >('vault_read_only_list_form_aliases'),
      _vault_read_only_list_known_lockboxes = library
          .lookupFunction<
            _VaultReadOnlyListKnownLockboxesNative,
            _VaultReadOnlyListKnownLockboxesDart
          >('vault_read_only_list_known_lockboxes'),
      _vault_read_only_free = library
          .lookupFunction<_VaultReadOnlyFreeNative, _VaultReadOnlyFreeDart>(
            'vault_read_only_free',
          ),
      _vault_agent_serve = library
          .lookupFunction<_VaultAgentServeNative, _VaultAgentServeDart>(
            'vault_agent_serve',
          ),
      _vault_agent_verify_transport = library
          .lookupFunction<
            _VaultAgentVerifyTransportNative,
            _VaultAgentVerifyTransportDart
          >('vault_agent_verify_transport'),
      _vault_agent_get = library
          .lookupFunction<_VaultAgentGetNative, _VaultAgentGetDart>(
            'vault_agent_get',
          ),
      _vault_agent_put = library
          .lookupFunction<_VaultAgentPutNative, _VaultAgentPutDart>(
            'vault_agent_put',
          ),
      _vault_agent_forget = library
          .lookupFunction<_VaultAgentForgetNative, _VaultAgentForgetDart>(
            'vault_agent_forget',
          ),
      _vault_agent_stop = library
          .lookupFunction<_VaultAgentStopNative, _VaultAgentStopDart>(
            'vault_agent_stop',
          ),
      _vault_agent_start = library
          .lookupFunction<_VaultAgentStartNative, _VaultAgentStartDart>(
            'vault_agent_start',
          ),
      _vault_agent_list = library
          .lookupFunction<_VaultAgentListNative, _VaultAgentListDart>(
            'vault_agent_list',
          ),
      _vault_agent_sleep_support = library
          .lookupFunction<
            _VaultAgentSleepSupportNative,
            _VaultAgentSleepSupportDart
          >('vault_agent_sleep_support'),
      _vault_platform_status = library
          .lookupFunction<_VaultPlatformStatusNative, _VaultPlatformStatusDart>(
            'vault_platform_status',
          ),
      _vault_platform_set_scope = library
          .lookupFunction<
            _VaultPlatformSetScopeNative,
            _VaultPlatformSetScopeDart
